# HTTP-and-Socket-Server

./: Dockerfile  README.md  index.html  main.py  pyproject.toml
storage/: data.json
