[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["remmover <77463027+remmover@users.noreply.github.com>"]
readme = "README.md"
#packages = [{include = "web_app"}]

[tool.poetry.dependencies]
python = "~3.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
